--- a/casos_de_estudo.tex
+++ b/casos_de_estudo.tex
@@ -6,18 +6,17 @@ De forma a verificar a viabilidade da aplicação decidiu-se usar três casos re
 
 % subsection engenharia_de_linguagens (end)
 
-No primeiro caso pretende-se que haja uma plataforma para a submissão do Projeto Integrado de Engenharia de Linguagens do Mestrado em Engenharia Informática da Universidade do Minho.
+No primeiro caso o Projeto Integrado de Engenharia de Linguagens do Mestrado em Engenharia Informática da Universidade do Minho.
 Engenharia de Linguagens tem um turno e quatro docentes.
 
-Quanto ao Projeto Integrado, este tem que ser feito por grupos com o máximo de três elementos, existem quatro fases de entrega(as 3 primeiras tem uma nota qualitativa e a última fase vale 20 valores). Relativamente à entrega, em cada fase é obrigatório entregar um relatório e um conjunto de slides usados na apresentação, na última fase além do relatório, é para enviar o código desenvolvido assim como outros ficheiros que o grupo ache relevante.
+Quanto ao Projeto Integrado, este tem que ser feito por grupos com o máximo de três elementos. Existem quatro fases de entrega (as 3 primeiras tem uma nota qualitativa e a última fase vale 20 valores). Relativamente à entrega, em cada fase é obrigatório entregar um relatório e um conjunto de slides usados na apresentação. Na última fase além do relatório, torna-se obrigatório enviar o código desenvolvido assim como outros ficheiros que o grupo ache relevante.
 
-O processo começa com o registo do docente responsável, caso este já possuia uma conta tem efetuar login na aplicação. Após o login é necessário criar a cadeira de Engenharia de Linguagens, durante este processo será necessário preencher campos relativos ao nóme da instituição e do curso, caso um destes já exista a disciplina será associada aos campos existentes. No fim de criar a disciplina, o docente será encaminhado para o painel da disciplina criada. Dentro do painel da disciplina, o docente responsável pode adicionar docentes à disciplina.
+O processo começa com o registo do docente responsável, caso o docente já possua uma conta tem de efetuar \emph{login} na aplicação. Após o \emph{login} é necessário criar a cadeira de Engenharia de Linguagens, durante este processo será necessário preencher campos relativos ao nome da instituição e do curso. Caso já  exista o curso ou a instituição, a disciplina será associada aos campos existentes. No fim de criar a disciplina, o docente será encaminhado para o painel da disciplina criada. Dentro do painel da disciplina, o docente responsável pode adicionar docentes à disciplina.
 
-Procede-se para a criação do projeto. Ao criar um novo projeto o docente adiciona o enunciado, adiciona as várias fases do projeto, indica que os grupos só podem ter três elementos. Em cada fase indica que tem que ser enviado um relatório e os slides da apresentação em formato \emph{PDF}. Por fim tem a opção de lançar o projeto ou se apenas o quer deixar visivel para o resto da equipa docente, para o caso de haverem alterações.Após o projeto estar criado o docente é encaminhado para o painel do projeto.
-Um aluno uma vez registado e autenticado inscreve-se na cadeira e acede ao painel do projeto. No painel do projeto cria o seu grupo e faz uma submissão. É então reencaminhado para um formulario onde escreve um resumo do trabalho feito e envia os ficheiros necessários, concluindo assim a submissão.
+Procede-se para a criação do projeto. Ao criar um novo projeto o docente adiciona o enunciado, adiciona as várias fases do projeto, indica que os grupos só podem ter três elementos. Em cada fase indica que tem que ser enviado um relatório e os \emph{slides} da apresentação em formato \emph{PDF}. Por fim tem a opção de lançar o projeto ou se apenas o quer deixar visível para o resto da equipa docente, para o caso de haverem alterações. Após o projeto estar criado o docente é encaminhado para o painel do projeto.
+Um aluno uma vez registado e autenticado inscreve-se na cadeira e acede ao painel do projeto. No painel do projeto cria o seu grupo e faz uma submissão. É então reencaminhado para um formulário onde escreve um resumo do trabalho feito e envia os ficheiros necessários, concluindo assim a submissão.
 
-Voltando ao docente, este acede novamente ao painel do projeto e abre a página de entrega de um projeto submetido. Após analizar o relatório ou qualquer outro ficheiro enviado, carrega em avaliar e atribui a nota ao grupo ou a cada elemento individualmente, podendo também adicionar comentários sobre a nota atribuida.
-
+Voltando ao docente, este acede novamente ao painel do projeto e abre a página de entrega de um projeto submetido. Após analisar o relatório ou qualquer outro ficheiro enviado, carrega em avaliar e atribui a nota ao grupo ou a cada elemento individualmente, podendo também adicionar comentários sobre a nota atribuída.
 
 \subsection{Estatística} % (fold)
 \label{sub:estat_stica}
@@ -26,20 +25,21 @@ Voltando ao docente, este acede novamente ao painel do projeto e abre a página 
 
 No segundo caso tem-se como exemplo um projeto da cadeira de Estatística do curso de Economia. Esta cadeira tem quatro turnos e dois docentes. Quanto ao projeto tem que ser feito em grupos de dois ou três elementos, restringido a alunos do mesmo turno, tem apenas uma fase, existe um ficheiro com dados para auxilio da realização do projeto e no momento da entrega além do relatório tem-se que enviar os resultados obtidos no \emph{SPSS} que estão no formato \emph{SAV}.
 
-O processo começa pelo registo da cadeira no sistema após o registo e identificação do docente. Assumindo que todos os alunos já se inscreveram na disciplina é feito a inscrição dos alunos em cada turno por parte do docente. De seguida cria-se o projeto no qual se indica o enunciado do projeto, o ficheiro de dados, restringe-se os grupos de forma a que estes sejam constituidos por elementos do mesmo turno e que a dimensão deste seja de dois a três elementos e indica-se quais os ficheiros obrigatórios no momento da entrega. Por último os alunos submetem o projeto feito e o docente indica a nota do mesmo tal como acontece no primeiro caso.
+O processo começa pelo registo da cadeira no sistema após o registo e identificação do docente. Assumindo que todos os alunos já se inscreveram na disciplina é feito a inscrição dos alunos em cada turno por parte do docente. De seguida cria-se o projeto no qual se indica o enunciado do projeto, o ficheiro de dados, restringe-se os grupos para que estes sejam constituídos por elementos do mesmo turno e que a dimensão deste seja de dois a três elementos e indica-se quais os ficheiros obrigatórios no momento da entrega. Por último os alunos submetem o projeto feito e o docente indica a nota do mesmo tal como acontece no primeiro caso.
 
 \subsection{Desafios de Proramação da Universidade do Minho} % (fold)
 \label{sub:desafios_de_prorama_o_da_universidade_do_minho}
 
 % subsection desafios_de_prorama_o_da_universidade_do_minho (end)
 
-No terceiro e último caso pretende-se submeter os desafios algorítmicos dos Desafios de Programação da Universidade do Minho (DPUM). Estes desafios são feitos individualente e são corregidos automáticamente pela aplicação. Não é necessário entregar relatório e não existe data limite de submissão.
+No terceiro e último caso pretende-se submeter os desafios algorítmicos dos Desafios de Programação da Universidade do Minho (DPUM). Estes desafios são feitos individualmente e são corregidos automaticamente pela aplicação. Não é necessário entregar relatório e não existe data limite de submissão.
 
-Quanto aos Desafios de Programação da Universidade é dirigido por um único docente e não existem turnos. Na submissão de um desafio é obrigatório que haja uma \emph{Makefile} e que o nome do executável tem que ser igual o ao nome indicado pelo docente.
+Quanto aos Desafios de Programação da Universidade é dirigido por um único docente e não existem turnos. Na submissão de um desafio é obrigatório que haja uma \emph{Makefile} e que o nome do executável deverá ser igual o ao nome indicado pelo docente.
 
 Assumindo que já existe o registo e autenticação do docente no sistema, procede-se para o registo do DPUM no sistema, o campo referente ao curso é deixado em branco.
 
-Na criação de um desafio indica-se que se pretende que haja correção automática, faz-se upload dos ficheiros de \emph{input} e \emph{output} e que os grupos sejam de um único elemento. Para o aluno no momento da submissão não é necessário criar grupo. Após a submissão de um desafio é enviado um \emph{mail} para o aluno com os resultados da correção automática.
+Na criação de um desafio indica-se que se pretende que haja correção automática, faz-se \emph{upload} dos ficheiros de \emph{input} e \emph{output} e que os grupos sejam de um único elemento. Para o aluno no momento da submissão não é necessário criar grupo. Após a submissão de um desafio é enviado um \emph{mail} para o aluno com os resultados da correção automática.
+
 
 
 
