--- a/casos_de_estudo.tex
+++ b/casos_de_estudo.tex
@@ -1,12 +1,12 @@
 \section{Casos de estudo}
-De forma a verificar a viabilidade da aplicação decidiu-se usar três casos reais.
+De forma a verificar a viabilidade da aplicação decidiu-se usar três casos reais. Nesse vai-se explorar cada um dos casos de forma a que a aplicação resolva os problemas expostos.
 
 \subsection{Engenharia de Linguagens} % (fold)
 \label{sub:engenharia_de_linguagens}
 
 % subsection engenharia_de_linguagens (end)
 
-No primeiro caso o Projeto Integrado de Engenharia de Linguagens do Mestrado em Engenharia Informática da Universidade do Minho.
+No primeiro caso tem-se o Projeto Integrado de Engenharia de Linguagens do Mestrado em Engenharia Informática da Universidade do Minho.
 Engenharia de Linguagens tem um turno e quatro docentes.
 
 Quanto ao Projeto Integrado, este tem que ser feito por grupos com o máximo de três elementos. Existem quatro fases de entrega (as 3 primeiras tem uma nota qualitativa e a última fase vale 20 valores). Relativamente à entrega, em cada fase é obrigatório entregar um relatório e um conjunto de slides usados na apresentação. Na última fase além do relatório, torna-se obrigatório enviar o código desenvolvido assim como outros ficheiros que o grupo ache relevante.
