--- a/casos_de_estudo.tex
+++ b/casos_de_estudo.tex
@@ -1,5 +1,5 @@
 \section{Casos de estudo}
-De forma a verificar a viabilidade da aplicação decidiu-se usar três casos reais. Nesse vai-se explorar cada um dos casos de forma a que a aplicação resolva os problemas expostos.
+De forma a verificar a viabilidade da aplicação decidiu-se usar três casos reais. Nesse sentido irá se explorar cada um dos casos de forma a explorar como a aplicação resolve os problemas expostos.
 
 \subsection{Engenharia de Linguagens} % (fold)
 \label{sub:engenharia_de_linguagens}
