--- a/concorrencia_e_alternativas.tex
+++ b/concorrencia_e_alternativas.tex
@@ -1,1 +1,74 @@
 \section{Concorrência e alternativas}
+
+Uma das medidas efectudas durante o planeamento da aplicação foi a análise de concorrência e o estudo das alternativas existentes. Desta forma foi possivel adicionar mais funcionalidades à aplicação de forma a que esta fosse o mais completa possível.
+
+\subsection{Concorrência} % (fold)
+\label{sub:concorrencia}
+
+De todas as aplicações concorrentes, as que mais se destacam são os Sistemas de Gestão de Aprendizagem (\emph{SGA}),também conhecidas por \emph{Learning Management Systems} - \emph{LMS}. Dentro dos \emph{SGA} imperam as seguintes aplicações:
+\begin{itemize}
+	\item \emph{Blackboard}
+	\item \emph{Moodle}
+	\item \emph{Studifi}
+	\item \emph{Haiku LMS}
+\end{itemize}
+
+\subsubsection{Blackboard} % (fold)
+\label{ssub:blackboard}
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[width=0.5\textwidth]{images/concorrencia/blackboard.jpg}
+         \caption{\emph{Blackboard}}
+         \label{fig: blackboard}
+\end{figure}
+
+A aplicação \href{http://www.blackboard.com}{\emph{Blackboard}} é composta por quatro tipos de utilizadores:
+\begin{description}
+	\item[Aluno] Um aluno pode submeter projetos, inscrever-se em grupos e consultar a informação disponibilizada pelos professores.
+	\item[Professores] Um professor pode criar projetos e fazer avaliações qualitativas e quantitativas dos trabalhos enviados.
+	\item[Técnicos] Os técnicos são responsáveis pela manutenção da aplicação.
+	\item[Supervisores] Os supervisores fazem a gestão de cursos,disciplinas,docentes e alunos. Estes também podem gerar estatísticas do sistema.
+\end{description}
+
+Os projetos criados na \emph{Blackboard} não estão disponíveis para o público. Também não existe a noção de turnos, sendo estes substituidos pelos grupos. Os grupos são criados dentro da disciplina e um aluno pode estar inscrito em múltiplos grupos.
+
+\subsubsection{Moodle} % (fold)
+\label{ssub:moodle}
+\begin{figure}[H]
+        \centering
+        \includegraphics[width=0.5\textwidth]{images/concorrencia/moodle.jpg}
+         \caption{\emph{Moodle}}
+         \label{fig: moodle}
+\end{figure}
+A aplicação \href{http://www.moodle.org}{\emph{Moodle}} é composta por três tipos de utilizadores:
+
+\begin{description}
+	\item[Alunos] Os alunos podem submeter projetos e consultar a informação disponibilizada pelos professores.
+	\item[Professores] Os professores podem criar projetos e fazer uma avaliação quantitativa dos projetos enviados.
+	\item[Administradors] Os Admnistradores são responsáveis pela manutenção do aplicação. Também são responsáveis por fazer a gestão dos utilizadores existentes.
+\end{description}
+
+Um dos problemas do \emph{Moodle} é a inexistência de grupos e de turnos. Quanto a projetos públicos apenas se estes forem inseridos manualmente pelos alunos nos seus portefólios.
+
+\subsubsection{Studifi} % (fold)
+\label{ssub:studifi}
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[width=0.5\textwidth]{images/concorrencia/studifi.png}
+         \caption{\emph{Studifi}}
+         \label{fig: studifi}
+\end{figure}
+
+A aplicação \href{https://studifi.com/}{\emph{Studifi}} é composta por três tipos de utilizadores:
+
+\begin{description}
+	\item[]
+\end{description}
+
+
+\subsection{Alternativas} % (fold)
+\label{sub:alternativas}
+
+% subsection alternativas (end)
