--- a/concorrencia_e_alternativas.tex
+++ b/concorrencia_e_alternativas.tex
@@ -26,7 +26,7 @@ De todas as aplicações concorrentes, as que mais se destacam são os Sistemas 
 A aplicação \href{http://www.blackboard.com}{\emph{Blackboard}} é composta por quatro tipos de utilizadores:
 \begin{description}
 	\item[Aluno] Um aluno pode submeter projetos, inscrever-se em grupos e consultar a informação disponibilizada pelos professores.
-	\item[Professores] Um professor pode criar projetos e fazer avaliações qualitativas e quantitativas dos trabalhos enviados.
+	\item[Professores] Um professor pode criar projetos e fazer avaliações qualitativas e quantitativas dos trabalhos enviados. Os projetos criados podem ter correção automática.
 	\item[Técnicos] Os técnicos são responsáveis pela manutenção da aplicação.
 	\item[Supervisores] Os supervisores fazem a gestão de cursos,disciplinas,docentes e alunos. Estes também podem gerar estatísticas do sistema.
 \end{description}
@@ -45,7 +45,7 @@ A aplicação \href{http://www.moodle.org}{\emph{Moodle}} é composta por três 
 
 \begin{description}
 	\item[Alunos] Os alunos podem submeter projetos e consultar a informação disponibilizada pelos professores.
-	\item[Professores] Os professores podem criar projetos e fazer uma avaliação quantitativa dos projetos enviados.
+	\item[Professores] Os professores podem criar projetos e fazer uma avaliação quantitativa dos projetos enviados. Os projetos criados podem ter correção automática.
 	\item[Administradors] Os Admnistradores são responsáveis pela manutenção do aplicação. Também são responsáveis por fazer a gestão dos utilizadores existentes.
 \end{description}
 
@@ -64,9 +64,31 @@ Um dos problemas do \emph{Moodle} é a inexistência de grupos e de turnos. Quan
 A aplicação \href{https://studifi.com/}{\emph{Studifi}} é composta por três tipos de utilizadores:
 
 \begin{description}
-	\item[]
+	\item[Alunos] Os alunos podem submeter projetos e consultar a informação disponibilizada pelos professores.
+	\item[Professores] Os professores podem criar exercicios que são avaliados automáticamente e podem criar projetos.
+	\item[Administradors] Os Admnistradores são responsáveis pela manutenção do aplicação. Também são responsáveis por fazer a gestão dos utilizadores existentes.
 \end{description}
 
+No \emph{Studifi} os exercicios não estão disponiveis para o público. Uma das caraterísticas que se destaca nesta aplicação é a existencia de controlo de versões nos ficheiros submetidos.
+
+
+\subsubsection{Haiku LMS} % (fold)
+\label{ssub:haiku_lms}
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[width=0.5\textwidth]{images/concorrencia/studifi.png}
+         \caption{\emph{Haiku LMS}}
+         \label{fig: studifi}
+\end{figure}
+
+A aplicação \href{http://www.haikulearning.com/}{\emph{Haiku LMS}} é composta por três tipos de utilizadores:
+
+\begin{description}
+	\item[Alunos] Os alunos podem submeter projetos e consultar a informação disponibilizada pelos professores.
+	\item[Professores] Os professores podem criar projetos e exercicios e gerir pautas de avaliação.
+	\item[Instituições de ensino] Responsáveis pela gestão de cursos e disciplinas da instituição.
+\end{description}
 
 \subsection{Alternativas} % (fold)
 \label{sub:alternativas}
