Adiciona protótipo fidedigno e corrige bug no main.tex

--- a/prototipos_fidedignos.tex
+++ b/prototipos_fidedignos.tex
@@ -1,1 +1,16 @@
 \subsection{Protótipos fidedignos}
+Para além dos primeiros protótipos, fizeram-se também protótipos fidedignos baseados nos anteriormente
+citados de forma a aumentar o nível de detalhe, bem como aproximar a prototipagem o mais 
+próximo possível do resultado final esperado. Assim sendo, segue-se na figura \ref{fig:prot_fid_home}
+um exemplo da prototipagem fidedigna da página principal.
+Com este tipo de protótipos espera-se aprimorar os detalhes, bem como os esquemas de cores,
+arranjos gráficos, entre outros pormenores.
+De notar que os protótipos fidedignos feitos neste projeto foram construídos diretamente a partir
+da linguagem HTML.
+
+\begin{figure}[H] 
+  \centering
+  \includegraphics[width=0.8\textwidth,center]{images/prototipos/fidedigno_home.jpg}
+  \caption{Protótipo fidedigno página inicial}
+  \label{fig:prot_fid_home}
+\end{figure}
