--- a/concorrencia_e_alternativas.tex
+++ b/concorrencia_e_alternativas.tex
@@ -93,4 +93,44 @@ A aplicação \href{http://www.haikulearning.com/}{\emph{Haiku LMS}} é composta
 \subsection{Alternativas} % (fold)
 \label{sub:alternativas}
 
+No que diz ao respeito às alternativas, estam são divididas em cinco situações:
+\begin{itemize}
+	\item Submissão de trabalhos
+
+	\begin{description}
+		\item[Submissão via emai] O aluno envia um \emph{mail} com o trabalho para o \emph{mail} de um docente. Muitas vezes com um assunto especifico de forma a que o docente possa filtrar o \emph{mail} e obter os vários trabalhos enviados.
+		\item[Partilha de \emph{links}] O aluno faz upload do seu trabalho para um servidor externo(\emph{github,dropbox,etc}) e partilha o \emph{link} com o docente.
+		\item[Entrega de unidades de armazenamento] O aluno grava o seu trabalho numa unidade de armazenamento(\emph{Usb flash drive, cd/dvd, etc}) e entrega a respetiva unidade ao docente.
+	\end{description}
+
+	\item Gestão de pautas
+
+	\begin{description}
+		\item[Folhas de cálculo ou \emph{PDF}] É entre aos alunos um ficheiro com as notas do projeto. Muitas vezes a pauta entregue não refere a qualidade do trabalho.
+		\item[Vitrinas] O docente imprime as notas finais e afixa-as numa vitrina do estabelecimento de ensino.
+	\end{description}
+
+	\item Correção automática
+
+		\begin{description}
+			\item[\emph{Script}] O docente tem um \emph{script} que analisa os vários ficheiros enviados pelo avaliados. Fica ao critério do docente, as funcionalidades desse \emph{script}, isto é se o \emph{script} criado verifica por exemplo extensões de ficheiros ou até mesmo se os ficheiros enviados correspondem a um determinado \emph{output} para um certo \emph{input}.
+		\end{description}
+	\item Inscrições de grupos
+	\begin{description}
+		\item[\emph{Mail}] Um responsável do grupo envia um \emph{mail} ao docente com a constituição do grupo. Este \emph{mail} pode ficar sujeito as mesma regras que a submissão de trabalhos via \emph{mail}.
+		\item[Entrega do trabalho] O grupo só fica registado e o docente só tem conhecimento desta após a entrega do trabalho.
+		\item[Aviso com presença] Um elemento do grupo ou então todos os elementos notificam o docente em frente deste.
+	\end{description}
+	\item Gestão de grupos
+	\begin{description}
+		\item[Documento] O docente possui um documento com a constituição dos grupos e de outras informações relativas a esse grupo como por exemplo as notas dos trabalhos
+	\end{description}
+
+\end{itemize}
+
+
+
+
+% subsection submiss_o_de_trabalhos (end)
+
 % subsection alternativas (end)
