correção de erros

--- a/concorrencia_e_alternativas.tex
+++ b/concorrencia_e_alternativas.tex
@@ -1,6 +1,6 @@
 \section{Concorrência e alternativas}
 
-Uma das medidas efectudas durante o planeamento da aplicação foi a análise de concorrência e o estudo das alternativas existentes. Desta forma foi possivel adicionar mais funcionalidades à aplicação de forma a que esta fosse o mais completa possível.
+Uma das medidas efetuadas durante o planeamento da aplicação foi a análise de concorrência e o estudo das alternativas existentes. Desta forma foi possível adicionar mais funcionalidades à aplicação de forma a que esta fosse o mais completa possível.
 
 \subsection{Concorrência} % (fold)
 \label{sub:concorrencia}
@@ -28,10 +28,10 @@ A aplicação \href{http://www.blackboard.com}{\emph{Blackboard}} é composta po
 	\item[Aluno] Um aluno pode submeter projetos, inscrever-se em grupos e consultar a informação disponibilizada pelos professores.
 	\item[Professores] Um professor pode criar projetos e fazer avaliações qualitativas e quantitativas dos trabalhos enviados. Os projetos criados podem ter correção automática.
 	\item[Técnicos] Os técnicos são responsáveis pela manutenção da aplicação.
-	\item[Supervisores] Os supervisores fazem a gestão de cursos,disciplinas,docentes e alunos. Estes também podem gerar estatísticas do sistema.
+	\item[Supervisores] Os supervisores fazem a gestão de cursos, disciplinas, docentes e alunos. Estes também podem gerar estatísticas do sistema.
 \end{description}
 
-Os projetos criados na \emph{Blackboard} não estão disponíveis para o público. Também não existe a noção de turnos, sendo estes substituidos pelos grupos. Os grupos são criados dentro da disciplina e um aluno pode estar inscrito em múltiplos grupos.
+Os projetos criados na \emph{Blackboard} não estão disponíveis para o público. Também não existe a noção de turnos, sendo estes substituídos pelos grupos. Os grupos são criados dentro da disciplina e um aluno pode estar inscrito em múltiplos grupos.
 
 \subsubsection{Moodle} % (fold)
 \label{ssub:moodle}
@@ -46,8 +46,9 @@ A aplicação \href{http://www.moodle.org}{\emph{Moodle}} é composta por três 
 \begin{description}
 	\item[Alunos] Os alunos podem submeter projetos e consultar a informação disponibilizada pelos professores.
 	\item[Professores] Os professores podem criar projetos e fazer uma avaliação quantitativa dos projetos enviados. Os projetos criados podem ter correção automática.
-	\item[Administradors] Os Admnistradores são responsáveis pela manutenção do aplicação. Também são responsáveis por fazer a gestão dos utilizadores existentes.
+	\item[Administradors] Os Administradores são responsáveis pela manutenção da aplicação. Também são responsáveis por fazer a gestão dos utilizadores existentes.
 \end{description}
+
 
 Um dos problemas do \emph{Moodle} é a inexistência de grupos e de turnos. Quanto a projetos públicos apenas se estes forem inseridos manualmente pelos alunos nos seus portefólios.
 
@@ -65,11 +66,11 @@ A aplicação \href{https://studifi.com/}{\emph{Studifi}} é composta por três 
 
 \begin{description}
 	\item[Alunos] Os alunos podem submeter projetos e consultar a informação disponibilizada pelos professores.
-	\item[Professores] Os professores podem criar exercicios que são avaliados automáticamente e podem criar projetos.
-	\item[Administradors] Os Admnistradores são responsáveis pela manutenção do aplicação. Também são responsáveis por fazer a gestão dos utilizadores existentes.
+	\item[Professores] Os professores podem criar exercícios que são avaliados automaticamente e podem criar projetos.
+	\item[Administradors] Os Administradores são responsáveis pela manutenção da aplicação. Também são responsáveis por fazer a gestão dos utilizadores existentes.
 \end{description}
 
-No \emph{Studifi} os exercicios não estão disponiveis para o público. Uma das caraterísticas que se destaca nesta aplicação é a existencia de controlo de versões nos ficheiros submetidos.
+No \emph{Studifi} os exercícios não estão disponíveis para o público. Uma das características que se destaca nesta aplicação é a existência de controlo de versões nos ficheiros submetidos.
 
 
 \subsubsection{Haiku LMS} % (fold)
@@ -86,20 +87,20 @@ A aplicação \href{http://www.haikulearning.com/}{\emph{Haiku LMS}} é composta
 
 \begin{description}
 	\item[Alunos] Os alunos podem submeter projetos e consultar a informação disponibilizada pelos professores.
-	\item[Professores] Os professores podem criar projetos e exercicios e gerir pautas de avaliação.
+	\item[Professores] Os professores podem criar projetos e exercícios e gerir pautas de avaliação.
 	\item[Instituições de ensino] Responsáveis pela gestão de cursos e disciplinas da instituição.
 \end{description}
 
 \subsection{Alternativas} % (fold)
 \label{sub:alternativas}
 
-No que diz ao respeito às alternativas, estam são divididas em cinco situações:
+No que diz ao respeito às alternativas, estas são divididas em cinco situações:
 \begin{itemize}
 	\item Submissão de trabalhos
 
 	\begin{description}
-		\item[Submissão via emai] O aluno envia um \emph{mail} com o trabalho para o \emph{mail} de um docente. Muitas vezes com um assunto especifico de forma a que o docente possa filtrar o \emph{mail} e obter os vários trabalhos enviados.
-		\item[Partilha de \emph{links}] O aluno faz upload do seu trabalho para um servidor externo(\emph{github,dropbox,etc}) e partilha o \emph{link} com o docente.
+		\item[Submissão via \emph{mail}] O aluno envia um \emph{mail} com o trabalho para o \emph{mail} de um docente. Muitas vezes com um assunto especifico para que o docente possa filtrar o \emph{mail} e obter os vários trabalhos enviados.
+		\item[Partilha de \emph{links}] O aluno faz \emph{upload} do seu trabalho para um servidor externo(\emph{github,dropbox,etc}) e partilha o \emph{link} com o docente.
 		\item[Entrega de unidades de armazenamento] O aluno grava o seu trabalho numa unidade de armazenamento(\emph{Usb flash drive, cd/dvd, etc}) e entrega a respetiva unidade ao docente.
 	\end{description}
 
@@ -113,7 +114,7 @@ No que diz ao respeito às alternativas, estam são divididas em cinco situaçõ
 	\item Correção automática
 
 		\begin{description}
-			\item[\emph{Script}] O docente tem um \emph{script} que analisa os vários ficheiros enviados pelo avaliados. Fica ao critério do docente, as funcionalidades desse \emph{script}, isto é se o \emph{script} criado verifica por exemplo extensões de ficheiros ou até mesmo se os ficheiros enviados correspondem a um determinado \emph{output} para um certo \emph{input}.
+			Fica ao critério do docente, as funcionalidades desse emph{script}, isto é se o emph{script} criado verifica por exemplo extensões de ficheiros ou até mesmo se os ficheiros enviados correspondem a um determinado emph{output} para um certo emph{input}.
 		\end{description}
 	\item Inscrições de grupos
 	\begin{description}
