--- a/concorrencia_e_alternativas.tex
+++ b/concorrencia_e_alternativas.tex
@@ -78,7 +78,7 @@ No \emph{Studifi} os exercícios não estão disponíveis para o público. Uma d
 
 \begin{figure}[H]
         \centering
-        \includegraphics[width=0.5\textwidth]{images/concorrencia/studifi.png}
+        \includegraphics[width=0.5\textwidth]{images/concorrencia/haiku.png}
          \caption{\emph{Haiku LMS}}
          \label{fig: studifi}
 \end{figure}
@@ -114,15 +114,18 @@ No que diz ao respeito às alternativas, estas são divididas em cinco situaçõ
 	\item Correção automática
 
 		\begin{description}
-			Fica ao critério do docente, as funcionalidades desse emph{script}, isto é se o emph{script} criado verifica por exemplo extensões de ficheiros ou até mesmo se os ficheiros enviados correspondem a um determinado emph{output} para um certo emph{input}.
+			\item[Script] Fica ao critério do docente, as funcionalidades desse emph{script}, isto é se o emph{script} criado verifica por exemplo extensões de ficheiros ou até mesmo se os ficheiros enviados correspondem a um determinado emph{output} para um certo \emph{input}.
 		\end{description}
 	\item Inscrições de grupos
+
 	\begin{description}
 		\item[\emph{Mail}] Um responsável do grupo envia um \emph{mail} ao docente com a constituição do grupo. Este \emph{mail} pode ficar sujeito as mesma regras que a submissão de trabalhos via \emph{mail}.
 		\item[Entrega do trabalho] O grupo só fica registado e o docente só tem conhecimento desta após a entrega do trabalho.
 		\item[Aviso com presença] Um elemento do grupo ou então todos os elementos notificam o docente em frente deste.
 	\end{description}
+
 	\item Gestão de grupos
+
 	\begin{description}
 		\item[Documento] O docente possui um documento com a constituição dos grupos e de outras informações relativas a esse grupo como por exemplo as notas dos trabalhos
 	\end{description}
