Adiciona versão final beta

--- a/analise_do_problema.tex
+++ b/analise_do_problema.tex
@@ -1,4 +1,5 @@
 \section{Análise do problema}
+
 No meio académico, principalmente em áreas mais focadas numa vertente prática, muitas vezes
 os alunos são postos à prova através de trabalhos práticos. Neste caso, após a avaliação, os trabalhos
 práticos são arquivados pelos docentes e esquecidos permanentemente numa prateleira, até um dia
@@ -33,3 +34,5 @@ práticos criando assim um sistema que cumpre as necessidades académicas intern
 e alunos bem como estabelece um ponto de ligação entre a comunidade académica e
 o trabalho desenvolvido nesse meio, e o resto das pessoas com interesse nas
 áreas abrangidas pelos projetos disponíveis.
+
+\newpage
