--- a/arquitetura_do_sistema.tex
+++ b/arquitetura_do_sistema.tex
@@ -55,3 +55,6 @@ Na Figura ~\ref{fig:submissao-projecto} podemos consultar o fluxo de submissão 
   \caption{Fluxo: Submeter Projeto}
   \label{fig:submissao-projecto}
 \end{figure}
+
+
+\newpage
