--- a/casos_de_estudo.tex
+++ b/casos_de_estudo.tex
@@ -41,6 +41,8 @@ Assumindo que já existe o registo e autenticação do docente no sistema, proce
 Na criação de um desafio indica-se que se pretende que haja correção automática, faz-se \emph{upload} dos ficheiros de \emph{input} e \emph{output} e que os grupos sejam de um único elemento. Para o aluno no momento da submissão não é necessário criar grupo. Após a submissão de um desafio é enviado um \emph{mail} para o aluno com os resultados da correção automática.
 
 
+\newpage
+
 
 
 
