--- a/conclusao.tex
+++ b/conclusao.tex
@@ -25,3 +25,5 @@ e o sistema. Atualmente os resultados parecem ser positivos, pois a análise ao
 resultado destes protótipos relevam que estes se destacam pela simplicidade de 
 intuitividade bastante elevada, o que é o objetivo idealizado para este 
 sistema.
+
+\newpage
