--- a/concorrencia_e_alternativas.tex
+++ b/concorrencia_e_alternativas.tex
@@ -138,3 +138,5 @@ No que diz ao respeito às alternativas, estas são divididas em cinco situaçõ
 % subsection submiss_o_de_trabalhos (end)
 
 % subsection alternativas (end)
+
+\newpage
