--- a/estado_do_desenvolvimento.tex
+++ b/estado_do_desenvolvimento.tex
@@ -18,3 +18,5 @@ Os Modelos do nosso sistema são os enunciados na subsecção \textbf{Diagrama d
 Dentro dos modelos já estão definidas todas as relações entre as diferentes entidades do sistema, assim como algumas restrições e validações dos dados.
 
 Para além da definição das Migrações e dos Modelos avançamos na construção em HTML das páginas principais.
+
+\newpage
