--- a/funcionalidades_do_sistema.tex
+++ b/funcionalidades_do_sistema.tex
@@ -8,7 +8,7 @@ De forma a conseguir fazer este tipo de especificação foram idealizados os seg
 que interagirão com o sistema, sendo eles: utilizador não registado e utilizador registado na forma de 
 docente e aluno.
 
-\begin{figure}[htbp!] 
+\begin{figure}[H] 
    \centering
    \includegraphics[width=1\textwidth]{images/funcionalidades/usecases.png}
     \caption{Diagrama com casos de uso dos utilizadores do sistema}
@@ -77,3 +77,5 @@ aos alunos fazerem submissões ou entregas de projetos dentro de uma unidade
 curricular de onde façam parte de um dos turnos. Para além disso também lhes é 
 possível consultar as avaliações dadas pelos docentes às suas submissões assim 
 como consultar a unidade curricular e as pautas da mesma.
+
+\newpage
