--- a/introducao.tex
+++ b/introducao.tex
@@ -1,4 +1,5 @@
 \section{Introdução}
+
 Em termos gerais, este projeto baseia-se num sistema de informação que permita a gestão de trabalhos 
 práticos de unidades curriculares de alunos do ensino superior.
 
@@ -46,3 +47,5 @@ trabalhos práticos, que após tratamento da informação se transforma num AIP 
 Information Package}) e então arquivado, e por fim a aplicação disponibiliza o trabalho no formato
 de um DIP (\textit{Dissemination Information Package}) pronto a ser disseminado e consumido pelos
 utilizadores do sistema.
+
+\newpage
