--- a/proposta_tecnologica.tex
+++ b/proposta_tecnologica.tex
@@ -84,5 +84,5 @@ Para manipulação de documentos \textbf{XML}, utilizaremos as tecnologias lecio
 Relativamente a tecnologias de Base de Dados, utilizaremos bases de dados SQL, mais especificamente \href{http://www.sqlite.org/}{\textbf{SQLite}} 
 para ambientes de teste e desenvolvimento, e \href{http://www.postgresql.org/}{\textbf{PostgreSQL}} para ambientes de produção.
 
-
+\newpage
 
