--- a/repositorio_de_informacao.tex
+++ b/repositorio_de_informacao.tex
@@ -12,3 +12,5 @@ Na Figura ~\ref{fig:der} pode-se consultar todas as tabelas que constituirão o 
 \end{figure}
 
 De notar que será utilizado \textbf{SQLite} em ambientes de desenvolvimento e testes, e \textbf{PostgreSQL} para ambientes de produção.
+
+\newpage
