--- a/analise_de_requisitos.tex
+++ b/analise_de_requisitos.tex
@@ -1,5 +1,6 @@
 \section{Análise de requisitos}
 
+
 Identificado o problema, pretende-se assim desenvolver um sistema de informação para gestão de trabalhos práticos. O sistema oferecerá um conjunto de funcionalidades e facilidades aos docentes e alunos em todo o processo de entrega de um trabalho prático, desde a gestão da unidade curricular até à publicação das avaliações.\\
 
 Identifica-se à partida 3 grupos de utilizadores com funcionalidades e objetivos diferentes em todo o processo.\\
@@ -18,3 +19,5 @@ Pretende-se no desenvolvimento do sistema simplificar todas as tarefas dos utili
 Nesse seguimento o sistema procurará ser flexível, não se restringindo a apenas uma abordagem nem sendo demasiado genérico, procurar-se-á definir abordagens mais específicas, mas sempre com opções mais genéricas para englobar casos menos comuns. É exemplo disso a geração automática do \textit{Project Record} do pacote enviado, em casos mais específicos o ficheiro poderá ser entregue pelo utilizador, no entanto em outros casos torna-se necessário auxiliar na geração desse mesmo ficheiro para assegurar que todos os pacotes enviados estão em conformidade com a estrutura esperada de um pacote. O sistema também procurará simplificar processos organizacionais, como facilitar a criação de uma unidade curricular identificando apenas nome, instituição, curso e ano letivo. O facto de uma unidade curricular estar associada a um ano letivo ajuda a nível organizacional e permite que não seja necessária a transferência de alunos e docentes entre anos letivos. Procurará também simplificar processos de validação das entregas através das restrições de ficheiros obrigatórios e nome do executável. Ser capaz de automatizar a avaliação através dos testes no sistema e geração de pautas automáticas e de gerir mais facilmente grupos de trabalho e respetivas entregas.\\
 
 O objetivo final é lançar um sistema bem focado onde cada grupo de utilizadores execute com facilidade as suas tarefas principais, perdendo o menor tempo possível em problemas secundários. 
+
+\newpage
