Adiciona versão final

--- a/anexos.tex
+++ b/anexos.tex
@@ -2,6 +2,6 @@
 \begin{figure}[H] 
 	\centering
 	\includegraphics[width=0.3\textwidth]{images/plano_de_trabalho/gannt_0.png}
- 	\caption{Diagrama de Gannt completo}
+ 	\caption{Diagrama de Gantt completo}
  	\label{fig: workplan0}
 \end{figure}
