--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -17,12 +17,19 @@ pt:
           attributes:
             password_confirmation:
               blank: "Confirmação da Password em branco."
+              confirmation: "Confirmação da Password não é igual à Password."
             password:
               confirmation: "Confirmação da Password."
-              blank:  "Password em branco."
+              blank:  "Password não pode ser vazia."
               too_short: "Password demasiado curta (mínimo de 8 caracteres)"
             current_password: 
               blank: "Password atual em branco."
+            email:
+              blank: "Email não pode ser vazio."
+              invalid: "Email inválido."
+              taken: "Email já está a ser utilizado."
+            name:
+              blank: "Nome não pode ser vazio."
 
   errors:
     messages:
@@ -31,8 +38,8 @@ pt:
       already_confirmed: "já foi confirmado, por favor tente efectuar a autenticação"
       not_locked: "não foi bloqueado"
       not_saved:
-        one: "Foi impossível completar a acção devido ao seguinte facto:"
-        other: "Foi impossível completar a acção devido aos seguintes factos:"
+        one: "Verifique o erro seguinte:"
+        other: "Verifique os erros seguintes:"
 
   devise:
     failure:
